--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "parcel": "^2.9.3"
+    "parcel": "^2.9.3",
+    "process": "^0.11.10"
   },
   "scripts": {
     "start": "npx parcel ./index.html"
