--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "process": "^0.11.10"
   },
   "scripts": {
-    "start": "npx parcel ./index.html"
+    "start": "npx parcel ./index.html",
+    "build": "npx parcel build ./index.html"
   }
 }
